@@ -1,6 +1,11 @@
+/* depreciated */
 .color-currentColor,
 .color-currentColor\:hover:hover,
-.anchor:hover .color-currentColor\:hover {
+.anchor:hover .color-currentColor\:hover,
+/* /depreciated */
+.color-current,
+.color-current\:hover:hover,
+.anchor:hover .color-current\:hover {
   color: currentColor;
 }
 
