@@ -4,6 +4,7 @@
   * (type) white-space
   * (type) overflow-wrap: break-word;
   * (color) add .color-{colorName} -> .{colorName}
+  * (color) fix .color-currentColor -> .color-current
 
 # 0.13.2 (2020-11-19)
 
